[package]
name = "super_simple_st7789driver"
version = "0.1.2"
edition = "2024"

keywords = ["st7789", "driver", "tft_display","embedded"]

repository = "https://github.com/bigoldcat123/st7789driver"

license = "MIT OR Apache-2.0"
description =" an async Rust driver library for controlling the ST7789 display"
[dependencies]
defmt = "1.0.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
